@@ -17,8 +17,6 @@
 import com.gradle.enterprise.gradleplugin.testdistribution.TestDistributionPlugin
 import gradlebuild.basics.BuildEnvironment
 import gradlebuild.basics.accessors.groovy
-import gradlebuild.basics.extension.BuildJvms
-import gradlebuild.basics.extension.vendorAndMajorVersion
 import gradlebuild.basics.tasks.ClasspathManifest
 import gradlebuild.basics.testDistributionEnabled
 import gradlebuild.filterEnvironmentVariables
@@ -31,11 +29,10 @@ plugins {
     groovy
     id("gradlebuild.module-identity")
     id("gradlebuild.dependency-modules")
-    id("gradlebuild.available-java-installations")
     id("org.gradle.test-retry")
 }
 
-extensions.create<UnitTestAndCompileExtension>("gradlebuildJava", java)
+extensions.create<UnitTestAndCompileExtension>("gradlebuildJava", tasks)
 
 removeTeamcityTempProperty()
 addDependencies()
@@ -48,15 +45,19 @@ configureTests()
 tasks.registerCITestDistributionLifecycleTasks()
 
 fun configureCompile() {
-    java.targetCompatibility = JavaVersion.VERSION_1_8
-    java.sourceCompatibility = JavaVersion.VERSION_1_8
+    java.toolchain {
+        languageVersion.set(JavaLanguageVersion.of(11))
+        vendor.set(JvmVendorSpec.ADOPTOPENJDK)
+    }
 
     tasks.withType<JavaCompile>().configureEach {
-        configureCompileTask(this, options, project.the<BuildJvms>().compileJvm.get())
+        configureCompileTask(options)
     }
     tasks.withType<GroovyCompile>().configureEach {
         groovyOptions.encoding = "utf-8"
-        configureCompileTask(this, options, project.the<BuildJvms>().compileJvm.get())
+        sourceCompatibility = "8"
+        targetCompatibility = "8"
+        configureCompileTask(options)
     }
     addCompileAllTask()
 }
@@ -86,17 +87,13 @@ fun configureSourcesVariant() {
     }
 }
 
-fun configureCompileTask(compileTask: AbstractCompile, options: CompileOptions, jdkForCompilation: JavaInstallation) {
-    options.isFork = true
+fun configureCompileTask(options: CompileOptions) {
+    options.release.set(8)
     options.encoding = "utf-8"
     options.isIncremental = true
     options.forkOptions.jvmArgs?.add("-XX:+HeapDumpOnOutOfMemoryError")
     options.forkOptions.memoryMaximumSize = "1g"
     options.compilerArgs.addAll(mutableListOf("-Xlint:-options", "-Xlint:-path"))
-    compileTask.inputs.property(
-        "javaInstallation",
-        Callable { jdkForCompilation.vendorAndMajorVersion() }
-    )
 }
 
 fun configureClasspathManifestGeneration() {
@@ -157,24 +154,34 @@ fun configureJarTasks() {
     }
 }
 
-fun Test.configureJvmForTest() {
-    val jvmForTest = project.the<BuildJvms>().testJvm.get()
+fun getPropertyFromAnySource(propertyName: String): Provider<String> {
+    return providers.gradleProperty(propertyName).forUseAtConfigurationTime()
+        .orElse(providers.systemProperty(propertyName).forUseAtConfigurationTime())
+        .orElse(providers.environmentVariable(propertyName).forUseAtConfigurationTime())
+}
 
+fun Test.jvmVersionForTest(): JavaLanguageVersion {
+    return JavaLanguageVersion.of(getPropertyFromAnySource("testJavaVersion").getOrElse(JavaVersion.current().majorVersion))
+}
+
+fun Test.configureJvmForTest() {
     jvmArgumentProviders.add(CiEnvironmentProvider(this))
-    executable = jvmForTest.javaExecutable.asFile.absolutePath
-    environment["JAVA_HOME"] = jvmForTest.installationDirectory.asFile.absolutePath
-    if (jvmForTest.javaVersion.isJava7) {
-        // enable class unloading
-        jvmArgs("-XX:+UseConcMarkSweepGC", "-XX:+CMSClassUnloadingEnabled")
+    val launcher = project.javaToolchains.launcherFor {
+        languageVersion.set(jvmVersionForTest())
+        getPropertyFromAnySource("testJavaVendor").map {
+            when (it.toLowerCase()) {
+                "oracle" -> vendor.set(JvmVendorSpec.ORACLE)
+                "openjdk" -> vendor.set(JvmVendorSpec.ADOPTOPENJDK)
+            }
+        }.getOrNull()
     }
-    if (jvmForTest.javaVersion.isJava9Compatible) {
+    javaLauncher.set(launcher)
+    if (jvmVersionForTest().canCompileOrRun(9)) {
         // allow embedded executer to modify environment variables
         jvmArgs("--add-opens", "java.base/java.util=ALL-UNNAMED")
         // allow embedded executer to inject legacy types into the system classloader
         jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
     }
-    // Includes JVM vendor and major version
-    inputs.property("javaInstallation", Callable { jvmForTest.vendorAndMajorVersion() })
 }
 
 fun Test.addOsAsInputs() {
